test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/initialize_incomplete.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
